@@ -47,10 +47,14 @@ define(`v0', `%r12')
 define(`v1', `%r13')
 define(`n',  `%r11')
 
+ABI_SUPPORT(DOS64)
+ABI_SUPPORT(STD64)
+
 ASM_START()
 	TEXT
 	ALIGN(16)
 PROLOGUE(mpn_addmul_2)
+	DOS64_ENTRY(4)
 	push	%rbx
 	push	%r12
 	push	%r13
@@ -196,6 +200,7 @@ L(L2):	mov	24(up), %rax
 	pop	%r13
 	pop	%r12
 	pop	%rbx
+	DOS64_EXIT()
 	ret
 EPILOGUE()
 ASM_END()
